bluec-tests/tests/invalid/functions/call_expression_ptr2.c
int main(void) {
    int a = 0;
    int *ptr = &a;
    return (ptr)();
}